--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -20,7 +20,7 @@
         ga('create', 'UA-46584405-2', 'auto');
         ga('send', 'pageview');
     </script>
-    
+
 </head>
 <body>
 
@@ -34,7 +34,7 @@
             <p><a href="#"><object type="image/svg+xml" data="images/MAS_Soon_166x47.svg">Download on the Mac App Store</object></a></p>
         </div>
 
-        <hr>
+        <hr><br>
 
         <div class="row marketing">
             <div class="col-sm-6">
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <br><hr>
+        <br><hr><br>
 
         <div class="row marketing">
             <div class="col-sm-8 col-sm-offset-2">
