Added links to podcast images & new title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="chapters.css">
-    <title>Chapters</title>
+    <title>Chapters &mdash; The best way to add MP3 chapter markers to your podcast.</title>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -25,7 +25,6 @@
 <body>
 
     <div class="container">
-
         <div class="jumbotron">
             <img src="images/screenshot-layout.png" width="100%" />
             <h1>Chapters</h1>
@@ -68,13 +67,13 @@
         </div>
         <div class="row marketing">
             <div class="col-sm-4 col-xs-6">
-                <img src="images/logo-layout.jpg" alt="" width="100%"/>
+                <a href="http://layout.fm"><img src="images/logo-layout.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <img src="images/logo-the-incomparable.jpg" alt="" width="100%"/>
+                <a href="https://www.theincomparable.com"><img src="images/logo-the-incomparable.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-sm-4 col-xs-6 center-mobile">
-                <img src="images/logo-clockwise.jpg" alt="" width="100%"/>
+                <a href="https://www.relay.fm/clockwise"><img src="images/logo-clockwise.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-xs-12">
                 <br>
