Added link to email notification form.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             <h1>Chapters</h1>
             <p class="lead">Chapters is the best way to add chapter markers to your podcast.</p>
             <br>
-            <p><a href="#"><object type="image/svg+xml" data="images/MAS_Soon_166x47.svg">Download on the Mac App Store</object></a></p>
+            <p>
+                <a href="#"><object type="image/svg+xml" data="images/MAS_Soon_166x47.svg">Download on the Mac App Store</object></a>
+                <br>
+                <a target="_blank" href="http://goo.gl/forms/TMdoUzD6je" style="font-weight: normal; font-size: 12pt;">Want to be notified when it comes out?</a>
+            </p>
         </div>
 
         <hr><br>
