Podcast links open in new tab

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
         </div>
         <div class="row marketing">
             <div class="col-sm-4 col-xs-6">
-                <a href="http://layout.fm"><img src="images/logo-layout.jpg" alt="" width="100%"/></a>
+                <a target="_blank" href="http://layout.fm"><img src="images/logo-layout.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-sm-4 col-xs-6">
-                <a href="https://www.theincomparable.com"><img src="images/logo-the-incomparable.jpg" alt="" width="100%"/></a>
+                <a target="_blank" href="https://www.theincomparable.com"><img src="images/logo-the-incomparable.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-sm-4 col-xs-6 center-mobile">
-                <a href="https://www.relay.fm/clockwise"><img src="images/logo-clockwise.jpg" alt="" width="100%"/></a>
+                <a target="_blank" href="https://www.relay.fm/clockwise"><img src="images/logo-clockwise.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-xs-12">
                 <br>
