This comma has been bothering me

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="row marketing">
             <div class="col-sm-6">
                 <h4>Really Fast</h4>
-                <p>From exporting your podcast out of Logic to having an MP3 file with chapter markers ready to post, Chapters is the fastest way to get your podcast in the hands of your fans.</p>
+                <p>From exporting your podcast out of Logic, to having an MP3 file with chapter markers ready to post, Chapters is the fastest way to get your podcast in the hands of your fans.</p>
             </div>
             <div class="visible-xs"><br></div>
             <div class="col-sm-6">
