Update now Chapters is live! 🖥🎙🎉

--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
         <div class="jumbotron">
             <img src="images/screenshot-layout.png" width="100%" />
             <h1>Chapters</h1>
-            <p class="lead">Chapters is the best way to add chapter markers to your podcast.</p>
+            <p class="lead">Want to make it easy for your listeners to tap directly through to sponsors? Skip over spoilers if they aren’t caught up? See what’s coming up in your episode? Let Chapters help.</p>
             <br>
-            <p>
-                <a href="#"><object type="image/svg+xml" data="images/MAS_Soon_166x47.svg">Download on the Mac App Store</object></a>
-                <br>
-                <a target="_blank" href="http://goo.gl/forms/TMdoUzD6je" style="font-weight: normal; font-size: 12pt;">Want to be notified when it comes out?</a>
-            </p>
+            <a target="_blank" href="https://itunes.apple.com/us/app/chapters-best-way-to-add-chapter/id1070963477?ls=1&mt=12">
+                <img src="images/download-on-mas.png" alt="Download on the Mac App Store" width="165px" height="40px" />
+            </a>
         </div>
 
         <hr><br>
@@ -90,7 +88,8 @@
         <br><hr>
 
         <footer class="footer">
-            <p>&copy; 2016, <a href="https://tpritc.com">Thomas Pritchard</a> (<a href="https://twitter.com/tpritc">@tpritc</a>)</p>
+            <p>&copy; 2016 <a href="https://tpritc.com">Thomas Pritchard</a></p>
+            <p><a href="https://twitter.com/tpritc">@tpritc</a></p>
             <p><a href="mailto:hi@tpritc.com">Support</a></p>
         </footer>
 
