Added Ruminate podcast and fixed footer link

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
             <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="https://www.theincomparable.com"><img src="images/logo-the-incomparable.jpg" alt="" width="100%"/></a>
             </div>
-            <div class="col-sm-4 col-xs-6 center-mobile">
+            <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="https://www.relay.fm/clockwise"><img src="images/logo-clockwise.jpg" alt="" width="100%"/></a>
+            </div>
+            <div class="col-sm-4 col-xs-6 center-desktop">
+                <a target="_blank" href="http://www.ruminatepodcast.com"><img src="images/logo-ruminate.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-xs-12">
                 <br>
@@ -88,7 +91,7 @@
         <br><hr>
 
         <footer class="footer">
-            <p>&copy; 2016 <a href="https://tpritc.com">Thomas Pritchard</a></p>
+            <p>&copy; 2016 <a href="http://tpritc.com">Thomas Pritchard</a></p>
             <p><a href="https://twitter.com/tpritc">@tpritc</a></p>
             <p><a href="mailto:hi@tpritc.com">Support</a></p>
         </footer>
