Fixed up release notes

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -38,10 +38,9 @@
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>Chapters 1.1 <small>Released January XX, 2016</small></h3>
-                <p>Thanks for purchasing Chapters, I really appreciate your support, and I hope you've found it useful so far! I'll be releasing updates here and there to add features and fix bugs. Here's what's new in Chapters 1.1:</p>
                 <ul>
-                    <li>Chapters now works really nicely with VoiceOver. Thanks to Gordon for helping me understand the workflow for blind and visually impaired users.</li>
-                    <li>Chapters will now convert your MP3 file to use ID3 v2.3 tags. No more messing around in iTunes to change the tags!</li>
+                    <li>Chapters now works really nicely with VoiceOver.</li>
+                    <li>Chapters will now convert your MP3 file to use ID3 v2.3 tags. No more <a href="http://chaptersapp.com/support/id3-version/">messing around in iTunes</a> to change the tags!</li>
                     <li>Chapters will let you overwrite files now. Sorry about that.</li>
                     <li>Chapters has received some minor visual touchups, to make sure your experience is just that much more polished.</li>
                 </ul>
