--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -37,10 +37,10 @@
         </div>
         <div class="row marketing">
             <div class="col-sm-12">
-                <h3>Chapters 1.1 <small>Released January XX, 2016</small></h3>
+                <h3>Chapters 1.1 <small>In App Review</small></h3>
                 <ul>
                     <li>Chapters now works really nicely with VoiceOver.</li>
-                    <li>Chapters will now convert your MP3 file to use ID3 v2.3 tags. No more <a href="http://chaptersapp.com/support/id3-version/">messing around in iTunes</a> to change the tags!</li>
+                    <li>Chapters will now convert your MP3 file to use ID3 v2.3 tags. No more <a href="http://chaptersapp.com/support/id3-version/">messing around in iTunes</a> to change the tag versions!</li>
                     <li>Chapters will let you overwrite files now. Sorry about that.</li>
                     <li>Chapters has received some minor visual touchups, to make sure your experience is just that much more polished.</li>
                 </ul>
