Update to 'Podcast Chapters'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="chapters.css">
-    <title>Chapters &mdash; The best way to add MP3 chapter markers to your podcast.</title>
+    <title>Podcast Chapters &mdash; The best way to add MP3 chapter markers to your podcast.</title>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -27,8 +27,8 @@
     <div class="container">
         <div class="jumbotron">
             <img src="images/screenshot-layout.png" width="100%" />
-            <h1>Chapters</h1>
-            <p class="lead">Want to make it easy for your listeners to tap directly through to sponsors? Skip over spoilers if they aren’t caught up? See what’s coming up in your episode? Let Chapters help.</p>
+            <h1>Podcast Chapters</h1>
+            <p class="lead">Want to make it easy for your listeners to tap directly through to sponsors? Skip over spoilers if they aren’t caught up? See what’s coming up in your episode? Let Podcast Chapters help.</p>
             <br>
             <a target="_blank" href="https://itunes.apple.com/us/app/chapters-best-way-to-add-chapter/id1070963477?ls=1&mt=12">
                 <img src="images/download-on-mas.png" alt="Download on the Mac App Store" width="165px" height="40px" />
@@ -40,23 +40,23 @@
         <div class="row marketing">
             <div class="col-sm-6">
                 <h4>Really Fast</h4>
-                <p>From exporting your podcast out of Logic, to having an MP3 file with chapter markers ready to post, Chapters is the fastest way to get your podcast in the hands of your fans.</p>
+                <p>From exporting your podcast out of your audio program, to having an MP3 file with chapter markers ready to post, Podcast Chapters is the fastest way to get your podcast in the hands of your fans.</p>
             </div>
             <div class="visible-xs"><br></div>
             <div class="col-sm-6">
                 <h4>Dead Simple</h4>
-                <p>No complex export settings, no pages of settings, and the shortcuts you already know. You import your file, add the chapters, then export it. It just works.</p>
+                <p>No complex export settings, no pages of preferences, and the shortcuts you already know. You import your file, add the chapters, then export it. It just works.</p>
             </div>
         </div>
         <div class="row marketing">
             <div class="col-sm-6">
                 <h4>Listen Back</h4>
-                <p>If you're not sure where to drop your chapter markers, listen back in Chapters. Adding a new chapter marker will drop it automatically at your current position.</p>
+                <p>If you're not sure where to drop your chapter markers, listen back in Podcast Chapters. Adding a new chapter marker will drop it automatically at your current position.</p>
             </div>
             <div class="visible-xs"><br></div>
             <div class="col-sm-6">
                 <h4>Native to the Mac</h4>
-                <p>No uploading, using a clunky web interface, and re-downloading. Chapters is designed for the Mac you use and love, by someone who uses and loves it too.</p>
+                <p>No uploading, using a clunky web interface, and re-downloading. Podcast Chapters is designed for the Mac you use and love, by someone who uses and loves it too.</p>
             </div>
         </div>
 
@@ -83,7 +83,7 @@
             <div class="col-xs-12">
                 <br>
                 <p style="text-align: center; color: #6e6e6e;">
-                    Use and love Chapters? Want your podcast here? <a href="https://twitter.com/tpritc">Let me know.</a>
+                    Use and love Podcast Chapters? Want your podcast here? <a href="https://twitter.com/tpritc">Let me know.</a>
                 </p>
             </div>
         </div>
