--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -27,22 +27,22 @@
     <div class="container">
         <div class="row marketing">
             <div class="col-xs-12" style="text-align: center;">
-                <h1>Chapters &mdash; Release Notes</h1>
+                <h1>Podcast Chapters &mdash; Release Notes</h1>
                 <p><a href="http://chaptersapp.com">← Return to Chapters</a></p>
             </div>
             <div class="col-xs-12">
-                <p>Thanks for purchasing Chapters, I really appreciate your support, and I hope you've found it useful so far! I'll be releasing updates here and there to add features and fix bugs. You can find a list of the changes so far on this page.</p>
+                <p>Thanks for purchasing Podcast Chapters, I really appreciate your support, and I hope you've found it useful so far! I'll be releasing updates here and there to add features and fix bugs. You can find a list of the changes so far on this page.</p>
             </div>
-            <hr>
         </div>
+        <hr>
         <div class="row marketing">
             <div class="col-sm-12">
-                <h3>Chapters 1.1 <small>In App Review</small></h3>
+                <h3>Podcast Chapters 1.1 <small>In App Review</small></h3>
                 <ul>
-                    <li>Chapters now works really nicely with VoiceOver.</li>
-                    <li>Chapters will now convert your MP3 file to use ID3 v2.3 tags. No more <a href="http://chaptersapp.com/support/id3-version/">messing around in iTunes</a> to change the tag versions!</li>
-                    <li>Chapters will let you overwrite files now. Sorry about that.</li>
-                    <li>Chapters has received some minor visual touchups, to make sure your experience is just that much more polished.</li>
+                    <li>Podcast Chapters now works nicely with VoiceOver.</li>
+                    <li>Podcast Chapters will now convert your MP3 file to use ID3 v2.3 tags. No more <a href="http://chaptersapp.com/support/id3-version/">messing around in iTunes</a> to change the tag versions!</li>
+                    <li>Podcast Chapters will let you overwrite files now. Sorry about that.</li>
+                    <li>Podcast Chapters has received some minor visual touchups, to make sure your experience is just that much more polished.</li>
                 </ul>
             </div>
         </div>
