More stuff on the release notes page

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -27,8 +27,9 @@
     <div class="container">
         <div class="row marketing">
             <div class="col-xs-12" style="text-align: center;">
-                <h1>Podcast Chapters &mdash; Release Notes</h1>
-                <p><a href="http://chaptersapp.com">← Return to Chapters</a></p>
+                <h1>Podcast Chapters</h1>
+                <h2>Release Notes</h2>
+                <p><a href="http://chaptersapp.com">← Return to Podcast Chapters</a></p>
             </div>
             <div class="col-xs-12">
                 <p>Thanks for purchasing Podcast Chapters, I really appreciate your support, and I hope you've found it useful so far! I'll be releasing updates here and there to add features and fix bugs. You can find a list of the changes so far on this page.</p>
@@ -38,6 +39,7 @@
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>Podcast Chapters 1.1 <small>In App Review</small></h3>
+                <p>In this release, <a href="https://twitter.com/tpritc/status/693053640890830848">Chapters has been renamed Podcast Chapters</a>.</p>
                 <ul>
                     <li>Podcast Chapters now works nicely with VoiceOver.</li>
                     <li>Podcast Chapters will now convert your MP3 file to use ID3 v2.3 tags. No more <a href="http://chaptersapp.com/support/id3-version/">messing around in iTunes</a> to change the tag versions!</li>
