Added MPU to the podcast list

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4 style="text-align: center;">Used by some of your favorite podcasts</h4>
             </div>
         </div>
-        <div class="row marketing">
+        <div class="row marketing cover-images">
             <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="http://layout.fm"><img src="images/logo-layout.jpg" alt="" width="100%"/></a>
             </div>
@@ -77,7 +77,10 @@
             <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="https://www.relay.fm/clockwise"><img src="images/logo-clockwise.jpg" alt="" width="100%"/></a>
             </div>
-            <div class="col-sm-4 col-xs-6 center-desktop">
+            <div class="col-sm-4 col-sm-offset-2 col-xs-6">
+                <a target="_blank" href="https://www.relay.fm/mpu"><img src="images/logo-mpu.jpg" alt="" width="100%"/></a>
+            </div>
+            <div class="col-sm-4 col-xs-6 center-mobile">
                 <a target="_blank" href="http://www.ruminatepodcast.com"><img src="images/logo-ruminate.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-xs-12">
