Added Open Ended to Podcast List 🎙✌🏾

--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
             <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="https://www.relay.fm/clockwise"><img src="images/logo-clockwise.jpg" alt="" width="100%"/></a>
             </div>
-            <div class="col-sm-4 col-sm-offset-2 col-xs-6">
+            <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="https://www.relay.fm/mpu"><img src="images/logo-mpu.jpg" alt="" width="100%"/></a>
             </div>
-            <div class="col-sm-4 col-xs-6 center-mobile">
+            <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="http://www.ruminatepodcast.com"><img src="images/logo-ruminate.jpg" alt="" width="100%"/></a>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <a target="_blank" href="http://www.openended.fm"><img src="images/logo-open-ended.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-xs-12">
                 <br>
