--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -38,7 +38,7 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
-                <h3>Podcast Chapters 1.1 <small>In App Review</small></h3>
+                <h3>Podcast Chapters 1.1 <small>Released January 29, 2016</small></h3>
                 <p>In this release, <a href="https://twitter.com/tpritc/status/693053640890830848">Chapters has been renamed Podcast Chapters</a>.</p>
                 <ul>
                     <li>Podcast Chapters now works nicely with VoiceOver.</li>
