Preparing for Podcast Chapters 1.2 release

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container">
         <div class="jumbotron">
-            <img src="images/screenshot-layout.png" width="100%" />
+            <img src="images/screenshot-layout-2.png" width="100%" />
             <h1>Podcast Chapters</h1>
             <p class="lead">Want to make it easy for your listeners to tap directly through to sponsors? Skip over spoilers if they aren’t caught up? See what’s coming up in your episode? Let Podcast Chapters help.</p>
             <br>
@@ -52,6 +52,17 @@
             <div class="col-sm-6">
                 <h4>Listen Back</h4>
                 <p>If you're not sure where to drop your chapter markers, listen back in Podcast Chapters. Adding a new chapter marker will drop it automatically at your current position.</p>
+            </div>
+            <div class="visible-xs"><br></div>
+            <div class="col-sm-6">
+                <h4>Add Metadata</h4>
+                <p>No need to go into iTunes and set metadata tags, Podcast Chapters now lets you set the podcast and episode metadata, including your show art.</p>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-6">
+                <h4>Power-User Features</h4>
+                <p>Do you edit multiple podcasts? Save time with the presets system in Podcast Chapters. Save your shows with pre-set metadata, including the show art. Never spend hours searching for that one image file again.</p>
             </div>
             <div class="visible-xs"><br></div>
             <div class="col-sm-6">
