--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../chapters.css">
-    <title>Chapters &mdash; Release Notes</title>
+    <title>Podcast Chapters &mdash; Release Notes</title>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -29,13 +29,34 @@
             <div class="col-xs-12" style="text-align: center;">
                 <h1>Podcast Chapters</h1>
                 <h2>Release Notes</h2>
-                <p><a href="http://chaptersapp.com">← Return to Podcast Chapters</a></p>
+                <br><br>
             </div>
             <div class="col-xs-12">
                 <p>Thanks for purchasing Podcast Chapters, I really appreciate your support, and I hope you've found it useful so far! I'll be releasing updates here and there to add features and fix bugs. You can find a list of the changes so far on this page.</p>
+                <p><a href="http://chaptersapp.com">← Return to Podcast Chapters</a></p>
             </div>
         </div>
         <hr>
+        <div class="row marketing">
+            <div class="col-sm-12">
+                <h3>Podcast Chapters 1.2 <small>Coming Soon</small></h3>
+                <img src="../images/screenshot-layout-2.png" style="width: 100%"/>
+                <p>In this big update, Podcast Chapters gets a ton of new features, helping you with that annoying last part of the podcast process.</p>
+                <ul>
+                    <li><strong>Metadata:</strong> Podcast Chapters now lets you update all other kinds of MP3 metadata for publishing your podcast, including the name of your podcast, the episode's title, and your show art.</li>
+                    <li><strong>Presets:</strong> You can now save a preset for a show, letting you quickly and easily fill information about the podcast, without having to find the pesky show art each time.</li>
+                    <li><strong>Import Chapters:</strong> You can now import your chapters from cue files or CSVs exported from Adobe Audition (thanks to friend of the app, <a href="https://twitter.com/joesteel/status/772239214935023616">Joe Steel</a> for providing me with some of his files).
+                    <li><strong>Export:</strong> You can now export M4A files, using their chapter format.</li>
+                    <li><strong>Chapter Artwork:</strong> You can now add artwork to a chapter marker! Give it a try!</li>
+                    <li><strong>Bugfixes:</strong> Squashed a number of bugs, including:</li>
+                    <ul>
+                        <li>Annoying text encoding bug (thanks to <a href="http://hindenburg.com")>Preben Friis of Hindenburg Systems</a> for helping me debug this).</li>
+                        <li>Conflicts between the shortcuts for jump time and screenshots. You can now use ⌥⌘1-5 to change the jump amount. This will also now update the menus! (My thanks to Ali Moosa for their help with this)</li>
+                        <li>A number of VoiceOver bugs.</li>
+                    </ul>
+                </ul>
+            </div>
+        </div>
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>Podcast Chapters 1.1 <small>Released January 29, 2016</small></h3>
@@ -51,6 +72,7 @@
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>Chapters 1.0 <small>Released January 24, 2016</small></h3>
+                <img src="../images/screenshot-layout.png" style="width: 100%"/>
                 <p>Initial Release.</p>
         </div>
     </div>
