Updated homepage with links to RN and FAQ. Updated FAQ.

--- a/faq/index.html
+++ b/faq/index.html
@@ -39,7 +39,7 @@
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>What podcast clients can I view MP3 chapter markers in?</h3>
-                <p>Most third-party podcast clients can view MP3 chapter markers. You can get an idea of the podcast clients that support MP3 chapter markers using this spreadsheet (you'll want column W). Please note it's not entirely up-to-date, with MP3 chapter markers quickly gaining adoption across the spectrum of podcast clients.</p>
+                <p>Most third-party podcast clients can view MP3 chapter markers. You can get an idea of the podcast clients that support MP3 chapter markers using <a href="https://docs.google.com/spreadsheets/d/1c2L14UVH1xtN4iDG4awheLbMgPCQgaKEamUauWs1gps/edit#gid=0">this spreadsheet</a> (you'll want column W). Please note it's not entirely up-to-date, with MP3 chapter markers quickly gaining adoption across the spectrum of podcast clients.</p>
                 <p>The big podcast client that cannot is Podcasts for iOS (and iTunes for macOS), and this is a known issue. There is a radar filed at <code>#24883412</code>, and we hope Apple will fix Podcasts for iOS and iTunes for macOS to support MP3 chapter markers soon.</p>
             </div>
             <div class="col-sm-12">
