Whoops missed some features that didn’t make it, also Chapters 1.2 is released! 🎉

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -39,14 +39,13 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
-                <h3>Podcast Chapters 1.2 <small>Coming Soon</small></h3>
+                <h3>Podcast Chapters 1.2 <small>Released September 5, 2016</small></h3>
                 <img src="../images/screenshot-layout-2.png" style="width: 100%"/>
                 <p>In this big update, Podcast Chapters gets a ton of new features, helping you with that annoying last part of the podcast process.</p>
                 <ul>
                     <li><strong>Metadata:</strong> Podcast Chapters now lets you update all other kinds of MP3 metadata for publishing your podcast, including the name of your podcast, the episode's title, and your show art.</li>
                     <li><strong>Presets:</strong> You can now save a preset for a show, letting you quickly and easily fill information about the podcast, without having to find the pesky show art each time.</li>
-                    <li><strong>Import Chapters:</strong> You can now import your chapters from cue files or CSVs exported from Adobe Audition (thanks to friend of the app, <a href="https://twitter.com/joesteel/status/772239214935023616">Joe Steel</a> for providing me with some of his files).
-                    <li><strong>Export:</strong> You can now export M4A files, using their chapter format.</li>
+                    <li><strong>Import Chapters:</strong> You can now import your chapters from cue</li>
                     <li><strong>Chapter Artwork:</strong> You can now add artwork to a chapter marker! Give it a try!</li>
                     <li><strong>Bugfixes:</strong> Squashed a number of bugs, including:</li>
                     <ul>
