Added 1.3.1 release notes

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -39,6 +39,17 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.3.1 <small>Released December 20, 2017</small></h3>
+                <p>In this minor update I've fixed a couple of bugs that managed to creep through in the 1.3 release.</p>
+                <ul>
+                    <li>Some of you reported that playback wasn't working for you. It should be fixed in this build.</li>
+                    <li>Fixed an annoying crash when using UTF-8 characters.</li>
+                    <li>Fixed an occasional crash when opening a podcast.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.3 <small>Released November 20, 2017</small></h3>
                 <p>This update simply would not have been possible without the incredible work of <a href="https://twitter.com/bjoreman">Fredrik Björeman</a>, who ported the entire app to Swift 3. This was no small task, and I'm incredibly indebted to him.</p>
                 <p>In this update, Podcast Chapters gets a couple of new features, and fixes a few bugs that managed to creep through.</p>
