--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -39,6 +39,15 @@
         <hr>
         <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 1.3.2 <small>Released January 5, 2018</small></h3>
+                <p>In this minor update I've fixed a bug that showed up in the 1.3.1 release.</p>
+                <ul>
+                    <li>Cover images now work properly in Finder and iTunes.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 1.3.1 <small>Released December 20, 2017</small></h3>
                 <p>In this minor update I've fixed a couple of bugs that managed to creep through in the 1.3 release.</p>
                 <ul>
