Updated screenshot and update FAQ to show iOS 12 support

--- a/faq/index.html
+++ b/faq/index.html
@@ -41,6 +41,7 @@
                 <h3>What podcast clients can I view MP3 chapter markers in?</h3>
                 <p>Most third-party podcast clients can view MP3 chapter markers. You can get an idea of the podcast clients that support MP3 chapter markers using <a href="https://docs.google.com/spreadsheets/d/1c2L14UVH1xtN4iDG4awheLbMgPCQgaKEamUauWs1gps/edit#gid=0">this spreadsheet</a> (you'll want column W). Please note it's not entirely up-to-date, with MP3 chapter markers quickly gaining adoption across the spectrum of podcast clients.</p>
                 <p>The big podcast client that cannot is Podcasts for iOS (and iTunes for macOS), and this is a known issue. There is a radar filed at <code>#24883412</code>, and we hope Apple will fix Podcasts for iOS and iTunes for macOS to support MP3 chapter markers soon.</p>
+                <p><strong>Update:</strong> iOS 12 <a href="https://twitter.com/tpritc/status/1004336257651134464">now supports MP3 chapter markers</a> on iOS. When it's released (expected in September 2018), the most used podcast client in the world will support MP3 chapter markers!</p>
             </div>
             <div class="col-sm-12">
                 <h3>What ID3 version does Podcast Chapters use?</h3>
