There's always another link to find.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col-xs-12">
                 <br>
                 <p style="text-align: center; color: #6e6e6e;">
-                    Use and love Podcast Chapters? Want your podcast here? <a href="https://twitter.com/tpritc">Let me know.</a>
+                    Use and love Podcast Chapters? Want your podcast here? <a href="https://twitter.com/bjoreman">Let me know.</a>
                 </p>
             </div>
         </div>
